--- a/ZDWindowsFormsTest.csproj
+++ b/ZDWindowsFormsTest.csproj
@@ -86,6 +86,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutoSizeForm.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Form2.cs">
       <SubType>Form</SubType>
