--- a/ZDWindowsFormsTest.csproj
+++ b/ZDWindowsFormsTest.csproj
@@ -161,6 +161,12 @@
   <ItemGroup>
     <None Include="Resources\WelcomePage.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\greenlight.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\redlight.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
